--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -705,3 +705,11 @@
   margin: 0 10px;
   font-weight: 500;
 }
+
+.pagination-controls-container {
+  margin-top: 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
